samples/_failures_safe/1761422396_1130c9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e08b8074.c: In function ‘main’:
./samples/SAFE/__tmp_e08b8074.c:157:45: error: missing terminating " character
  157 |         if (i < compressed.size - 1) printf("
      |                                             ^
./samples/SAFE/__tmp_e08b8074.c:157:9: error: expected expression at end of input
  157 |         if (i < compressed.size - 1) printf("
      |         ^~
./samples/SAFE/__tmp_e08b8074.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e08b8074.c:157:9: error: expected declaration or statement at end of input
